--- a/CSS/css/estilo.css
+++ b/CSS/css/estilo.css
@@ -121,7 +121,15 @@ body {
     margin:  0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
-    color: #1E1E2A;
+    color: #FFF2E7;
+}
+
+h1#principal {
+      text-align: center;
+}
+
+.imagem {
+    image-rendering:optimizeSpeed;
 }
 
 /* Header */
@@ -131,8 +139,8 @@ body {
     width: 100vw;
     background-color: #68E1E0;
     background-image: url('../img/Saved Pictures/lucimar.png');
-    background-repeat: no-repeat;
-    background-position: center;
+    background-repeat:no-repeat;
+    background-position: right;
     background-size: contain;
     display: flex;
     flex-direction: column;
@@ -153,6 +161,7 @@ h2 {
     text-transform: uppercase;
     letter-spacing: 4px;
 }
+
 
 .social-media {
     margin-top: 1rem;
@@ -250,7 +259,7 @@ a:hover {
     align-items: center;
     z-index: 2;
     opacity: 0;
-    visibility: hidden;
+    visibility:hidden;
     transition: 400ms ease-in-out 0s;
 }
 
@@ -340,7 +349,7 @@ a:hover {
     height: 100px;
     border-radius: 50%;
     display: block;
-    border: 1px solid #ffffff;
+    border: 1px solid #8E5D52;
     opacity: 0;
     transition: 0.5s ease-in-out;
 }
@@ -387,7 +396,7 @@ a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #1E1E2A;
+    color: #FFF2E7;
 }
 
 
